Edited GUI for page scaling
The borders of the page has been made to scale, this indivual components of each page to not scale yet.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ endorsed.javafx.ant.classpath=.
 file.reference.mysql-connector-java-8.0.17.jar=C:\\Program Files\\MySQL\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
-user.properties.file=C:\\Users\\Logan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Christopher J. White\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
